src/tests/testfiles/function-calls/1.txt
testfiles/function-calls/1.c:6:5: error: expected 'int' but argument is of type 'float'
f(0.0);
  ^
